--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "dependencies": {
     "axios": "^1.4.0",
     "consola": "^3.1.0",
+    "dotenv": "^16.1.4",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "node-fetch": "^3.3.1"
   }
 }
